# sketches-core-cpp

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/cpc/: cpc_common.hpp  cpc_sketch.hpp  cpc_union.hpp  fm85.h
include/hll/: HllUtil.hpp
include/kll/: kll_sketch.hpp
src/: CMakeLists.txt
src/cpc/: fm85.c  u32Table.c
src/hll/: HllArray.cpp  HllSketchImpl.cpp
test/: CMakeLists.txt
test/cpc/: CMakeLists.txt  compression_test.cpp
test/hll/: CMakeLists.txt  CrossCountingTest.cpp  HllUnionTest.cpp
test/kll/: CMakeLists.txt  kll_sketch_test.cpp
