add_library(
    sketchescore
    SHARED
    murmur3.cpp
    cpc/cpc_sketch.cpp
    cpc/fm85.c
    cpc/fm85Compression.c
    cpc/fm85Confidence.c
    cpc/fm85Merging.c
    cpc/fm85Util.c
    cpc/iconEstimator.c
    cpc/u32Table.c
    hll/AuxHashMap.cpp
    hll/CompositeInterpolationXTable.cpp
    hll/Conversions.cpp
    hll/CouponHashSet.cpp
    hll/CouponList.cpp
    hll/CubicInterpolation.cpp
    hll/HarmonicNumbers.cpp
    hll/Hll4Array.cpp
    hll/Hll6Array.cpp
    hll/Hll8Array.cpp
    hll/HllArray.cpp
    hll/HllPairIterator.cpp
    hll/HllSketch.cpp
    hll/HllSketchImpl.cpp
    hll/HllUnion.cpp
    hll/HllUtil.cpp
    hll/IntArrayPairIterator.cpp
    hll/RelativeErrorTables.cpp
)
